# glrem

./: .gitignore  README.md
client/: README.md  eslint.config.js  (+4 more)
server/: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  scene.py
server/docs/: deploy.md
server/scripts/: add_task.py  delete_tasks.py  install.sh
server/src/: database.py  seed.py
server/src/apis/usgs/: connection.py  earthquake.py
server/src/config/: __init__.py  clients.py  constants.py  examples.py
server/src/crud/: auth.py  task.py
server/src/endpoints/admin/: user.py
server/src/endpoints/geospatial/: artifact.py  changedetection.py  damageassessment.py  earthquake.py  flood.py  interferogram.py  task.py
server/src/geospatial/helpers/: asf.py  change_detection.py  changedetection.py  common.py  damage_assessment.py  damageassessment.py  data_conversion.py  earthquake.py  interferogram.py  inundation.py  scene_selection.py  sceneselection.py  visualization.py
server/src/geospatial/helpers/earthquake/: changedetection.py  damageassessment.py  interferogram.py
server/src/geospatial/helpers/flood/: inundation.py
server/src/geospatial/io/downloader/: asf_client.py  s3_client.py  sh_client.py
server/src/geospatial/lib/: asf.py  gdal.py
server/src/models/: earthquake.py  flood.py  task.py  user.py
server/src/schemas/: __init__.py  task.py
server/src/utils/: common.py  logger.py
server/tests/: test_auth.py  test_conversion.py  test_interferogram.py  test_s3_client.py  test_task.py  test_tile.py
server/tests/fixtures/: s3_fixture.py
(+71 files in other folders)
